refactor: collect(Collectors.toList())을 toList()로 변경